# Magi-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  retrieval_benchmark_report.json  run_magi.py
.github/workflows/: ci.yml
.magi/gauntlet/: acceptance_audit.json  adversarial_semantic.yaml  adversarial_semantic_report.json  gauntlet_manifest.json  live_report.json  production_report.json  retrieval_benchmark_report.json
issues/: issue-answer-grounding-smoke-failures.md  issue-gepa-prompt-context-hygiene.md  issue-hide-routing-debug-from-chat-report.md  issue-human-paraphrase-decision-negation.md  issue-human-smoke-routing-relevance.md  issue-live-provider-fallback-gate.md  issue-production-readiness-p0.md  issue-query-evidence-relevance.md  issue-reduce-exact-match-decision-rules.md  issue-review-p1-p2-production-readiness.md  issue-safety-short-circuit-blocked-input.md  issue-sensitive-term-policy-false-positive.md  issue-source-qualified-evidence-selection.md  issue-unsupported-informational-smoke-fixes.md
magi/: README.md  __main__.py
magi/app/: artifacts.py  cli.py  presentation.py  service.py
magi/core/: clients.py  config.py  embeddings.py  pgvectorstore.py  profiles.py  rag.py  routing.py  safety.py  semantic.py  storage.py  text_signals.py  utils.py  vectorstore.py
magi/data_pipeline/: chunkers.py  embed.py  ingest.py
magi/decision/: aggregator.py  calibrators.py  constants.py  model.py  schema.py
magi/dspy_programs/: compile.py  evaluation.py  grounding.py  heuristic_signals.py  optimization.py  personas.py  personas_optimized.py  runtime.py  schemas.py  (+2 more)
scripts/: install.sh
(+68 files in other folders)
